# pdf-parser-python

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.txt
api/: main.py  models.py
app/: main.py
app/models/: request.py  response.py
app/parsers/: base.py  generic.py  registry.py
app/parsers/banks/: axis.py  hdfc.py  icici.py  kotak.py  sbi.py
app/routers/: parse.py
app/utils/: balance_validator.py  bank_detector.py  pdf_loader.py
cli/: main.py
statement_parser/: __init__.py  enums.py  facade.py
statement_parser/models/: __init__.py  result.py  statement.py  transaction.py
statement_parser/parsers/: __init__.py  base.py  detector.py  generic.py  registry.py
statement_parser/parsers/banks/india/: axis.py  hdfc.py  hdfc_credit.py  icici.py  kotak.py  sbi.py
statement_parser/parsers/banks/sg/: dbs.py
statement_parser/parsers/banks/uae/: emirates_nbd.py  fab.py
statement_parser/parsers/banks/uk/: barclays.py  hsbc.py  lloyds.py
statement_parser/parsers/banks/us/: bank_of_america.py  chase.py  wells_fargo.py
statement_parser/parsers/credit_card/: amex.py  generic_cc.py
statement_parser/parsers/formats/: csv.py  ofx.py
statement_parser/utils/: __init__.py  balance_validator.py  currency.py  date_parser.py  ocr.py  text.py
tests/: test_api.py  test_facade.py  test_parsers.py  test_utils.py
