[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "statement-parser"
version = "0.2.0"
description = "Universal bank statement parser — PDF, OFX, QFX, CSV. Indian, US, UK, UAE, SG banks. Credit cards."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8",
    "pdfplumber>=0.11",
    "pikepdf>=9",
    "ofxtools>=0.9",
]

[project.optional-dependencies]
ocr = [
    "PyMuPDF>=1.24",
    "pytesseract>=0.3",
    "Pillow>=10",
    "opencv-python-headless>=4.10",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]
cli = ["click>=8"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
]

[project.scripts]
statement-parser = "cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["statement_parser*"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Library must never import web framework or CLI code
"statement_parser/**" = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
